lox-tests/tests/call/bool.stderr
ERROR: Can only call objects of type function or class, not boolean
 --> 1:1
  |
1 | true(); // expect runtime error: Can only call functions and classes.
  | ^----^
